--- a/TestFilterscript/scriptfiles/Large2.ini
+++ b/TestFilterscript/scriptfiles/Large2.ini
@@ -21,6 +21,7 @@ Location=2312.232323,2055.23231,10.44
 IntArray=1,5,2666,343,722,4342
 [MED1]
 key1=This key was edited by eINI
+key2=going to be deleted
 key3=true
 key4 = 5
 [MED2]
@@ -43,4 +44,10 @@ smallkey3=789
 key1=val
 key2=val
 key3=val
-;10 Lines
+[BOOLS]
+bool1=TRUE
+bool2=FALSE
+bool3=0
+bool4=1
+bool5=true
+bool6=false
